--- a/index.html
+++ b/index.html
@@ -10,40 +10,41 @@
         <h2>Oscar Reyes Rodríguez</h2>
         <h3>TÉCNICO EN INFORMÁTICA</h3></center>
         <div>
+            <center>
+                <a href="https://mail.google.com/mail/u/0/#inbox"><strong> Correo: </strong> oscar1095rr@gmail.com</a><br>
+                <strong>Fecha de nacimiento: </strong>10 de septiembre del 2005<br>
+                <strong>Celular: </strong> 221 948 3700 <br>
+</center>
+            
+        </div><hr>
+        <div><center>
+            <h2>Estudié</h2>
             <ul>
-                <li><a href="https://mail.google.com/mail/u/0/#inbox"><strong> Correo: </strong> oscar1095rr@gmail.com</a></li>
-                <li><strong>Fecha de nacimiento: </strong>10 de septiembre del 2005</li>
-                <li><strong>Celular: </strong> 221 948 3700 </li>
-
+                TSU Desarrollo de Software Multiplataforma<br>
+                Universidad Tecnológica de Nezahualcóyotl<br>
+                2023-2025<br>
+                CBT No.2 Isaac Guzmán Valdivia, Chimalhuacán"<br>
+                2010-2013<br>
+            </ul>
+            <h2>Idiomas</h2>
+            <ul>
+                Español nativo<br>
+                Ingles básico<br>
+            </ul>
+            <h2>Pasatiempos</h2>
+            <ul>
+                juegos de rol<br>
+                Lectura de manga<br>
+                Análisis de teoría<br>
+</center>
             </ul>
         </div><hr>
         <div>
-            <h2>Educación</h2>
-            <ul>
-                <li>TSU Desarrollo de Software Multiplataforma</li>
-                <li>Universidad Tecnológica de Nezahualcóyotl</li>
-                <li>2023-2025</li>
-                <li>CBT No.2 Isaac Guzmán Valdivia, Chimalhuacán"</li>
-                <li>2010-2013</li>
-            </ul>
-            <h2>Lenguajes</h2>
-            <ul>
-                <li>Español nativo</li>
-                <li>Ingles básico</li>
-            </ul>
-            <h2>Intereses</h2>
-            <ul>
-                <li>juegos de rol</li>
-                <li>lectura de manga</li>
-                <li>Análisis de teoría</li>
-            </ul>
-        </div><hr>
-        <div>
-            <h2>Carrera Profesional</h2>
+            <h2><center>Capacidades</center></h2>
             <p>Como programador, tengo habilidades técnicas sólidas en lenguajes de programación relevantes para el campo, como Java, Python, JavaScript, etc. Además, habilidades en estructuras de datos y algoritmos que son fundamentales para resolver problemas de manera eficiente. capaz de trabajar con bases de datos y comprender los principios de la ingeniería de software también son importantes. habilidades de resolución de problemas, pensamiento lógico y capacidad para trabajar en equipo. Y, por supuesto,la importancia de la capacidad de aprender y adaptarte rápidamente a nuevas tecnologías y entornos de desarrollo.<br></p>
         </div><hr>
         <div>
-            <strong><h2>Experiencias </h2></strong>
+            <strong><h2><center>Experiencias</center> </h2></strong>
             <h4>2019-2022 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Servicio social, U.A.E.M Chimalhuacán</h4>
             <p>El proceso de mantenimiento de equipos de cómputo.<br>
  puede dividirse en varias etapas:
@@ -65,7 +66,7 @@
 Al seguir estos pasos y realizar un mantenimiento regular, se puede prolongar la vida útil del equipo de cómputo y garantizar un rendimiento óptimo a largo plazo. <br></p> 
            
         <div>
-            <strong><h2>Habilidades</h2></strong>
+            <strong><h2><center>Habilidades</center></h2></strong>
             <ul>
                 <li>HTML5 & CSS</li>
                 <li>Java</li>
